--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,7 @@
 title: MLOps Wiki
 description: A wiki about MLOps
 baseurl: "/mlops-wiki"
+url: "https://ekbrothers.github.io"
+
+# Add this line to explicitly set Jekyll as the builder
+markdown: kramdown
